overflow fixed and zoom on click

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,17 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 html {
   font-size: 62.5%;
   font-family: sans-serif;
+  height: 100%;
 }
 body {
-  height: 100%;
-  min-height: 100vh;
-  overflow: hidden;
   font-family: sans-serif;
   font-size: 1.8rem;
   background-color: #f9f7f3;
@@ -39,7 +42,7 @@ input {
   padding: 0.5rem 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: #333;
   outline: none;
 }
